Update mmap preload usage and config (#730)